@@ -9,6 +9,7 @@
   * Moved features and specs to test/rails_app
 * bug fix
   * FormPanel with multiple association fields wouldn't submit data correctly
+  * GridPanel's forms take over the +text+ configuration option for columns as +fieldLabel+ for default fields
 
 = v0.6.4 - 2011-02-26
 * API changes
